# StART

./: .env.example  .gitignore  APPLY_INSTRUCTIONS.md  README.md  README_DL_V0.5_SECTION.md  constraints.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.venv-start/: pyvenv.cfg
configs/: databricks.yaml  default.yaml  dl_default.yaml  local_no_llm.yaml
docs/: architecture.md  deep_learning_demo.md  part_b_plan.md
examples/: deep_learning_sequence_demo.py  propensity_interactive.py  quickstart_local.py
notebooks/: 01_databricks_quickstart.py  02_propensity_model_review.py  03_deep_learning_model_review.ipynb  03_deep_learning_model_review.py
scripts/: bootstrap.sh
src/start/: __init__.py  cli.py  taxonomy.py
src/start/agents/: __init__.py  base.py  prompts.py  review.py
src/start/connectors/: __init__.py
src/start/core/: __init__.py  config.py  hashing.py  schemas.py
src/start/enterprise/: README.md  __init__.py  llm_gateway.py
src/start/evidence/: __init__.py  ledger.py
src/start/modeling/: __init__.py  data.py  deep_learning.py  dl_data.py  dl_explain.py  dl_figures.py  dl_metrics.py  dl_models.py  dl_report.py  dl_review_engines.py  dl_sensitivity.py  dl_training.py  explain.py  metrics.py  models.py  propensity.py  sensitivity.py  tuning.py
src/start/orchestration/: __init__.py  pipeline.py
src/start/policies/: default_policy.yaml
src/start/providers/: __init__.py  base.py  compute.py  data.py  experiment.py  keys.py  llm.py  storage.py
src/start/registry/: __init__.py
src/start/reporting/: __init__.py
src/start/tests/: __init__.py
src/start/tests/attribution/: __init__.py
src/start/tests/deep_learning/: __init__.py
src/start/tests/genai/: __init__.py
src/start/tests/portfolio/: __init__.py
src/start/tests/preprocessing/: __init__.py
src/start/tests/recommender/: __init__.py
src/start/tests/supervised/: __init__.py
src/start/tests/unsupervised/: __init__.py
src/start/tests/xai/: __init__.py
src/start/utils/: logging.py
tests/: conftest.py  test_agent_review.py  test_agents_and_pipeline.py  test_compute.py  test_connectors.py  test_deep_learning.py  test_dl_agent_review.py  test_dl_explainability.py  test_dl_notebook.py  test_dl_suite.py  test_enterprise_adapter.py  test_keys.py  test_ledger.py  test_modeling.py  test_preprocessing.py  test_propensity.py  test_registry.py  test_schemas.py  test_supervised.py  test_taxonomy_agents.py
